--- a/style.css
+++ b/style.css
@@ -13,11 +13,28 @@ body {
 
 #main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: rgb(151, 197, 181);
   height: 100%;
   width: 100%;
+  gap: 10px;
+}
+#heading{
+  padding-bottom: 15px;
+  font-size: 50px;
+  color: #fff;
+  background-color: aquamarine;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+}
+#heading h1{
+  padding: 10px;
+  padding-bottom: 0px;
+  -webkit-text-stroke: 2px black;
+  /* border: 2px solid black; */
 }
 #pannel {
   border-radius: 12px;
@@ -52,24 +69,37 @@ body {
   font-size: 20px;
   background-color: rgb(203, 242, 229);
 }
-#pannelButtom{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: calc(100% - 100px);
-    /* background-color: yellowgreen; */
+#pannelBottom {
+  background-color: rgb(60, 67, 57);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: calc(100% - 0px);
+
+  padding-top: 15px;
+  padding-bottom: 0px;
+  gap: 2px;
 }
-.bubble{
-    display: flex;
-    /* flex-wrap: wrap; */
-    align-items: center;
-    justify-content: center;
-    font-weight: 600px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: yellowgreen;
+#pannelBottom h1{
+  color: #fff;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 100px;
+  font-size: 80px;
 }
-.bubble:hover{
-    background-color: rgb(104, 139, 33);
+.bubble {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600px;
+  width: 55px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: yellowgreen;
+}
+.bubble:hover {
+  background-color: rgb(104, 139, 33);
+  cursor: pointer;
 }
